--- a/src/front/styles/project.css
+++ b/src/front/styles/project.css
@@ -8,6 +8,8 @@
   border-radius: 5px;
   transition: box-shadow 0.3s;
   margin: 20px;
+  height: 400px; /* Adjust the height as needed */
+  overflow: auto;
 }
 
 .project-card:hover {
@@ -21,4 +23,8 @@
 
 .project-details {
   padding: 20px;
+}
+
+.project-description {
+  height: 100%;
 }
